--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 <body>
   <!-- APP CONTAINER -->
   <div class="app-container">
-
+    <!-- UPPER BANNER -->
+    <div class="upper-banner">
+      
+    </div>
     <!-- MAIN -->
     <main>
       <!-- Left nav -->
       <nav class="left-nav">
-        Lorem
       </nav>
 
       <!-- Main Content -->
       <div class="main-content">
-        Lorem
       </div>
     </main>
 
     <!-- FOOTER -->
     <footer>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi eligendi doloribus blanditiis earum labore ad, ea velit repudiandae maiores! Natus maiores atque eos quibusdam iusto dolorem repellendus pariatur nam optio!
     </footer>
   </div>
 </body>
