end upper banner

--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <title>html-css-spotifyweb</title>
 </head>
 <body>
   <!-- APP CONTAINER -->
   <div class="app-container">
+
     <!-- UPPER BANNER -->
     <div class="upper-banner">
-      
+      <div class="center-btn-upgrade">
+        <a href="#" class="btn-upgrade">Effettua l'upgrade</a>      
+      </div>
     </div>
     <!-- MAIN -->
     <main>
@@ -22,6 +28,36 @@
 
       <!-- Main Content -->
       <div class="main-content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea totam animi, ipsa exercitationem optio unde, perspiciatis est dolorem repellendus porro nemo debitis quidem odio sed reprehenderit architecto necessitatibus dignissimos eaque!
+        Nobis aperiam optio accusamus nemo ad, similique quia molestias ea ipsum consequuntur exercitationem maxime ipsa minima possimus veritatis ducimus consectetur, dolorum alias aliquid facere qui! Ipsa nulla quae consequuntur est?
+        Magni placeat voluptatem, illo perspiciatis fugit nostrum ullam pariatur! Quos omnis necessitatibus natus, impedit est qui autem fugit? Atque deleniti cum laudantium dolore ea earum consectetur optio totam omnis blanditiis!
+        Consectetur inventore nemo saepe ipsam earum suscipit consequuntur veritatis porro dolores maxime vel, doloribus tenetur quae cumque reprehenderit. Tempore natus aspernatur quasi molestiae expedita, inventore recusandae ex eum excepturi at!
+        Quos quas pariatur nam magnam quia sed doloribus veritatis aspernatur quam, repellendus odit minus omnis rerum illo doloremque quibusdam? Fugit, magnam deleniti minima sit doloremque eveniet amet aliquid! Ut, omnis.
+        Unde inventore maiores nisi ullam quis dolor, earum at magnam asperiores incidunt corporis id voluptas ut, ea et facere explicabo veniam. Accusamus, laboriosam. Recusandae perferendis doloribus sapiente distinctio animi culpa.
+        Architecto molestias ea ipsum molestiae earum praesentium est suscipit libero eveniet laudantium iste, nihil voluptas assumenda ex, exercitationem corporis adipisci. Ullam, asperiores. Quisquam repellat deleniti velit quod modi delectus tempora.
+        Accusantium neque possimus at temporibus eveniet, omnis impedit repellendus quas numquam officia minus nobis, iure sequi ex? Quaerat quisquam sapiente voluptates ab, debitis non tempore ipsa repellendus est reiciendis corporis?
+        Mollitia consequuntur ipsum beatae reprehenderit! Nihil ea repellendus, assumenda saepe at hic, explicabo laboriosam impedit nobis dignissimos dolore veritatis eum, ut quibusdam sit non quia minima qui neque ad? Quia.
+        Ducimus sint sunt atque fuga a praesentium dolores rerum odio eius consectetur qui distinctio, totam inventore animi iste magnam nulla eos aspernatur, amet reiciendis vero corrupti ab! Suscipit, neque sed?
+        Laborum, a eius rem consectetur repudiandae, ipsum modi expedita saepe est hic id exercitationem maxime! Blanditiis officia ex, praesentium asperiores nihil consequatur nemo fuga possimus numquam neque impedit dolor rem.
+        Vitae exercitationem recusandae nam quod minima et, ipsam harum! Explicabo quam totam commodi voluptatum voluptatem repudiandae facilis non sunt fugit, recusandae nostrum ipsam. Enim quas assumenda necessitatibus voluptatem inventore neque!
+        Illum obcaecati ipsa sint. Saepe repellendus molestiae dicta tenetur esse nulla natus libero reiciendis iusto perspiciatis quas, odit nisi aliquid molestias quibusdam explicabo. Deserunt voluptatem expedita adipisci dolores rem debitis.
+        Sequi ab quibusdam iure at? Veniam, sit vitae! Minus explicabo ullam quos voluptatem et nostrum soluta neque at culpa esse sit quis quae dicta ducimus blanditiis, ea nulla aut inventore?
+        Quos iste est ducimus. Impedit accusantium sit esse vel maxime accusamus magnam harum neque iusto repellat, nesciunt quae amet, velit perferendis. Corrupti ab quidem earum iste veritatis quasi perspiciatis vel.
+        Excepturi sunt aliquam vero aperiam quasi animi odio impedit! Laboriosam voluptas impedit possimus reiciendis accusantium! Eligendi nesciunt, architecto molestiae mollitia quidem adipisci deleniti dolorum voluptatum excepturi ratione, est soluta illo.
+        Dolor explicabo molestiae ratione. Inventore modi ab voluptates magni quasi labore iste tempore explicabo velit nulla culpa tempora, voluptatem corporis doloremque, minima dolorum magnam architecto id officia suscipit. Consequuntur, praesentium.
+        Perspiciatis labore numquam vero aspernatur recusandae, temporibus et officiis, beatae optio quae in, possimus iste natus enim deserunt amet nam nesciunt delectus nostrum consequuntur. Ratione officiis eaque optio animi incidunt.
+        Veniam laudantium minima consequatur ad beatae omnis consequuntur. Sequi harum deleniti, distinctio, illo corrupti quasi provident minima aut cum natus vel delectus eligendi, ducimus voluptate iste fugit doloribus recusandae pariatur!
+        Consequuntur officia ea in dolorem nulla fugiat sapiente doloribus rerum maxime architecto, quae, accusamus amet. Quos tenetur facilis magni mollitia architecto, fugit iusto laudantium aut similique reiciendis. Dicta, nostrum vel.
+        Aspernatur in ex, aliquam, unde fugiat doloremque ullam optio sunt corporis maiores quo id repellat voluptatem inventore repellendus qui reiciendis sit at nisi. Quia vel ullam atque laborum aut accusamus.
+        Voluptas exercitationem doloribus quaerat dolorem itaque quia quidem dolor eveniet rem? Aspernatur corporis autem minima dignissimos sit. Iusto nesciunt possimus alias voluptates dolorem magni, tempora rerum quos, repudiandae officiis quae!
+        Quaerat asperiores provident aspernatur hic alias amet magnam perspiciatis praesentium voluptatum? Earum temporibus autem unde voluptatem libero voluptate soluta mollitia animi, blanditiis accusamus? Ipsa dolorum nihil, quibusdam sed rem repellendus.
+        Illum cupiditate voluptate atque fuga totam impedit alias libero amet ipsam harum voluptates omnis, doloremque nobis sed consequuntur magnam, commodi quae accusantium. Sint officia porro, ullam esse harum et amet.
+        Suscipit nostrum accusantium exercitationem, atque voluptatem ducimus illo qui maxime dolor blanditiis modi aspernatur mollitia, animi doloremque dolorum nulla minus, debitis numquam officia quidem architecto. Ipsum odio a asperiores repellendus.
+        Molestias vel veritatis commodi? Aut pariatur, molestiae rerum fugiat tenetur beatae, iste qui vitae reprehenderit praesentium corrupti eos. Alias dolores repudiandae necessitatibus praesentium delectus saepe suscipit dolore iste ducimus similique.
+        Repellendus obcaecati eaque, saepe cumque tempore deleniti quam commodi quis quas beatae, fuga illum corrupti voluptatibus animi placeat dicta pariatur dolor! Voluptate nisi deserunt ea, inventore sapiente facilis reiciendis omnis?
+        Animi vitae cumque assumenda eveniet nemo natus eum consectetur deserunt nostrum ut. Ducimus esse necessitatibus dolores quae aspernatur provident eos, molestiae accusantium asperiores obcaecati deleniti. Accusantium debitis placeat quia necessitatibus.
+        Distinctio veritatis cupiditate fugit iste reiciendis in harum maxime eum asperiores repudiandae quasi esse similique suscipit fugiat alias quibusdam molestiae at, ex minus facere ipsam incidunt! Ut consequuntur ullam natus!
+        Libero maiores voluptatum dolore? Sunt error nam totam corporis tempore recusandae consectetur repudiandae labore accusantium ipsum, ullam iusto cum debitis perspiciatis suscipit quas deleniti explicabo ratione! Assumenda et nihil asperiores?
       </div>
     </main>
 
