--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <main>
       <!-- Left nav -->
       <nav class="left-nav">
+        <div class="logo">
+          
+        </div>
       </nav>
 
       <!-- Main Content -->
