--- a/index.html
+++ b/index.html
@@ -15,18 +15,62 @@
   <div class="app-container">
 
     <!-- UPPER BANNER -->
-    <div class="upper-banner">
-      <div class="center-btn-upgrade">
-        <a href="#" class="btn-upgrade">Effettua l'upgrade</a>      
-      </div>
+    <div class="upper-banner flex-right-center">
+      <a href="#" class="btn-upgrade">Effettua l'upgrade</a>      
     </div>
     <!-- MAIN -->
     <main>
       <!-- Left nav -->
-      <nav class="left-nav">
+      <nav class="left-nav flex-center">
+
+        <!-- Logo -->
         <div class="logo">
-          
+          <img src="img/logo.svg" alt="Logo-big">
         </div>
+        <div class="logo-small">
+          <img src="img/logo-small.svg" alt="logo-small">        
+        </div>
+
+        <!-- Nav Menu -->          
+        <div class="nav-menu">
+          <div class="active-obj">
+            <img src="img/home.svg" alt="home">
+            <span> Home </span>
+          </div> 
+          <div class="hover-active-obj">
+            <img src="img/search.svg" alt="search" class="search">
+            <span> Cerca </span>
+          </div>
+          <div class="hover-active-obj">
+            <img src="img/libreria.svg" alt="library" class="search">
+            <span> La tua libreria </span>
+          </div>
+        </div>
+        <!-- End Nav Menu --> 
+        <!-- Nav Menu Small --> 
+        <div class="nav-menu-small">
+          <div class="home">
+            <img src="img/home.svg" alt="home">
+          </div>
+          <div class="search">
+            <img src="img/search.svg" alt="search">
+          </div> 
+          <div class="library">
+            <img src="img/libreria.svg" alt="library">
+          </div>      
+        </div>
+        <!-- End Nav Menu Small --> 
+        <!-- Playlists -->
+        <div class="playlists">
+          <h3>Playlist</h3>
+        </div>
+        <!-- Account -->
+        <div class="account">
+
+        </div>
+        <div class="account-small">
+
+        </div>      
       </nav>
 
       <!-- Main Content -->
