--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>html-css-spotifyweb</title>
 </head>
 <body>
@@ -23,13 +24,16 @@
       <!-- Left nav -->
       <nav class="left-nav flex-center">
 
-        <!-- Logo -->
-        <div class="logo">
-          <img src="img/logo.svg" alt="Logo-big">
+        <div class="logo-cont">
+          <!-- Logo -->
+          <div class="logo">
+            <img src="img/logo.svg" alt="Logo-big">
+          </div>
+          <div class="logo-small">
+            <img src="img/logo-small.svg" alt="logo-small">        
+          </div>
         </div>
-        <div class="logo-small">
-          <img src="img/logo-small.svg" alt="logo-small">        
-        </div>
+        
 
         <!-- Nav Menu -->          
         <div class="nav-menu">
@@ -63,10 +67,29 @@
         <!-- Playlists -->
         <div class="playlists">
           <h3>Playlist</h3>
+          <ul>
+            <li><span>+</span> Crea Playlist</li>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+          </ul>
         </div>
         <!-- Account -->
         <div class="account">
-
+          <div class="download">
+            <img src="img/download.svg" alt="download-btn">
+            <span>Installa app</span>
+          </div>
+          
+          <hr>
+          <div class="user">
+            <img src="img/profile.svg" alt="User">
+          </div>
+          <span>Jhon Doe</span>
         </div>
         <div class="account-small">
 
