crating code pt2

--- a/index.html
+++ b/index.html
@@ -24,43 +24,36 @@
       <!-- Left nav -->
       <nav class="left-nav flex-center">
 
-        <div class="logo-cont">
-          <!-- Logo -->
-          <div class="logo">
-            <img src="img/logo.svg" alt="Logo-big">
-          </div>        
-        </div>
-        <div class="logo-small">
-            <img src="img/logo-small.svg" alt="logo-small">        
+        <!-- MENU BIG -->
+
+        <!-- Logo -->
+        <div class="logo-cont">       
+          <img src="img/logo.svg" alt="Logo-big" class="margin-left logo">
         </div>
         <!-- Nav Menu -->          
         <div class="nav-menu">
-          <div class="active-obj">
-            <img src="img/home.svg" alt="home">
+          <div class="active-obj padding-left">
+            <img src="img/home.svg" alt="home" class="img-small">
             <span> Home </span>
           </div> 
-          <div class="hover-active-obj">
-            <img src="img/search.svg" alt="search">
+          <div class="hover-active-obj padding-left">
+            <img src="img/search.svg" alt="search" class="img-small">
             <span class="color-gray"> Cerca </span>
           </div>
-          <div class="hover-active-obj">
-            <img src="img/libreria.svg" alt="library">
+          <div class="hover-active-obj padding-left">
+            <img src="img/libreria.svg" alt="library" class="img-small">
             <span class="color-gray"> La tua libreria </span>
           </div>
         </div>
         <!-- End Nav Menu --> 
-        <!-- Nav Menu Small --> 
-        <div class="nav-menu-small">
-          <img src="img/home.svg" alt="home">
-          <img src="img/search.svg" alt="search">
-          <img src="img/libreria.svg" alt="library">     
-        </div>
-        <!-- End Nav Menu Small --> 
+       
         <!-- Playlists -->
-        <div class="playlists">
-          <h3>Playlist</h3>
-          <ul>
-            <li><span>+</span> Crea Playlist</li>
+        <div class="new-playlist">
+          <h3 class="title-playlist margin-left">Playlist</h3>
+          <span><span class="adding-icon margin-left">+</span> Crea Playlist</span>
+        </div>       
+        <div class="playlists margin-left">        
+          <ul class="playlist-list">
             <li>Nome Playlist</li>
             <li>Nome Playlist</li>
             <li>Nome Playlist</li>
@@ -71,25 +64,41 @@
           </ul>
         </div>
         <!-- Account -->
-        <div class="account">
+        <div class="account padding-left">
           <div class="download">
             <img src="img/download.svg" alt="download-btn">
             <span>Installa app</span>
           </div>
           <hr>
         </div>
-          
+
+        <!-- SMALL MENU -->
+
+        <!-- Logo Small -->
+        <div class="logo-small">
+          <img src="img/logo-small.svg" alt="logo-small" class="img-small">        
+        </div>
+
+        <!-- Nav Menu Small --> 
+        <div class="nav-menu-small">
+          <img src="img/home.svg" alt="home" class="img-small">
+          <img src="img/search.svg" alt="search" class="img-small">
+          <img src="img/libreria.svg" alt="library" class="img-small">     
+        </div>
+        <!-- End Nav Menu Small --> 
+
         <div class="account-small">
           <div class="download">
-            <img src="img/download.svg" alt="download-btn">
+            <img src="img/download.svg" alt="download-btn" class="img-mini">
           </div>
         </div>      
       </nav>
 
+
       <!-- Main Content -->
       <div class="main-content">
        <div class="nav-main">
-         <ul>
+         <ul class="">
           <li>In evidenza</li>
           <li>Podcast</li>
           <li>classifiche</li>
