ending first part of song main

--- a/index.html
+++ b/index.html
@@ -113,7 +113,84 @@
             <li>Scopri</li>
           </ul>
         </div>
+        <div class="main-container">
+          <h2>Recently played</h2>
+          <div class="flex-container song-recently">
 
+            <!-- Song 1 -->
+            <div class="song">
+              <div class="song-container">
+                <img src="img/metal_lifting.jpg" alt=""> 
+                <div class="overlay"></div>
+                <div class="play-song"><i class="fa-regular fa-circle-play fa-4x"></i></div>            
+              </div>
+              <h3>Heavy Metal</h3>
+              <h4>Subtitle</h4>
+            </div>         
+            <!-- END Song 1 -->
+
+            <!-- Song 2 -->
+            <div class="song">
+              <div class="song-container">
+                <img src="img/stranger.jpeg" alt=""> 
+                <div class="overlay"></div> 
+                <div class="play-song"><i class="fa-regular fa-circle-play fa-4x"></i></div>            
+              </div> 
+              <h3>Stranger Things, Vol.1 (a Netflix original Series Soundtrack)</h3>
+              <h4>Kyle Dixon & Michael Stain</h4>
+            </div>          
+            <!-- END Song 2 -->
+
+            <!-- Song 3 -->
+            <div class="song">
+              <div class="song-container">
+                <img src="img/aquietplace.jpeg" alt=""> 
+                <div class="overlay"></div>
+                <div class="play-song"><i class="fa-regular fa-circle-play fa-4x"></i></div>            
+              </div> 
+              <h3>A quiet place</h3>
+              <h4>Subtitle</h4>
+            </div> 
+            <!-- END Song 3 --> 
+
+            <!-- Song 4 -->
+            <div class="song">
+              <div class="song-container">
+                <img src="img/split.jpeg" alt=""> 
+                <div class="overlay"></div> 
+                <div class="play-song"><i class="fa-regular fa-circle-play fa-4x"></i></div>            
+              </div> 
+              <h3>Split</h3>
+              <h4>Subtitle</h4>
+            </div> 
+            <!-- END Song 4 --> 
+
+            <!-- Song 5 -->
+            <div class="song">
+              <div class="song-container">
+                <img src="img/cure.jpeg" alt=""> 
+                <div class="overlay"></div>
+                <div class="play-song"><i class="fa-regular fa-circle-play fa-4x"></i></div>            
+              </div> 
+              <h3>A cure for wellness</h3>
+              <h4>Subtitle</h4>
+            </div> 
+            <!-- END Song 5 --> 
+            
+            <!-- Song 6 -->
+            <div class="song">
+              <div class="song-container">
+                <img src="img/sinister.jpeg" alt=""> 
+                <div class="overlay"></div>
+                <div class="play-song"><i class="fa-regular fa-circle-play fa-4x"></i></div>           
+              </div> 
+              <h3>Sinister</h3>
+              <h4>Subtitle</h4>
+            </div> 
+            <!-- END Song 6 --> 
+
+          </div>
+        </div>
       </div>
     </main>
 
