--- a/index.html
+++ b/index.html
@@ -190,6 +190,59 @@
             <!-- END Song 6 --> 
 
           </div>
+          <!-- Created by -->
+          <div class="create-by">
+            <h2>Creato per Jhon Doe</h2>
+            <h4>Più ascoltati, più accurati saranno i suggerimenti.</h4>
+            <div class="flex-container song-recently">
+              <!-- Song 1 -->
+              <div class="song padding-top">
+                <div class="song-container">
+                  <img src="img/radar.jpeg" alt=""> 
+                  <div class="overlay"></div>
+                  <div class="play-song"><i class="fa-regular fa-circle-play fa-4x"></i></div>           
+                </div> 
+                <h3>Release Radar</h3>
+              </div> 
+              <!-- END Song 2 --> 
+              <!-- Song 1 -->
+              <div class="song padding-top">
+                <div class="song-container">
+                  <img src="img/mixdaily.jpeg" alt=""> 
+                  <div class="overlay"></div>
+                  <div class="play-song"><i class="fa-regular fa-circle-play fa-4x"></i></div>           
+                </div> 
+                <h3>Daily Mix 1</h3>
+              </div> 
+              <!-- END Song 2 --> 
+            </div>
+            <!-- Popular artists -->
+            <div class="popular-artists">
+              <h2>Artisti più popolari</h2>
+              <h4>Più ascoltati, più accurati saranno i suggerimenti.</h4>
+              <div class="flex-container song-recently">
+                <!-- Song 1 -->
+                <div class="song padding-top">
+                  <div class="song-container">
+                    <img src="img/youg.jpeg" alt=""> 
+                    <div class="overlay"></div>
+                    <div class="play-song"><i class="fa-regular fa-circle-play fa-4x"></i></div>           
+                  </div> 
+                  <h3>Release Radar</h3>
+                </div> 
+                <!-- END Song 2 --> 
+                <!-- Song 1 -->
+                <div class="song padding-top">
+                  <div class="song-container">
+                    <img src="img/einaudi.jpeg" alt=""> 
+                    <div class="overlay"></div>
+                    <div class="play-song"><i class="fa-regular fa-circle-play fa-4x"></i></div>           
+                  </div> 
+                  <h3>Daily Mix 1</h3>
+                </div> 
+                <!-- END Song 2 --> 
+            </div>
+          </div>
         </div>
       </div>
     </main>
