--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     <div class="overlay"></div>
                     <div class="play-song"><i class="fa-regular fa-circle-play fa-4x"></i></div>           
                   </div> 
-                  <h3>Release Radar</h3>
+                  <h3>Lana del Rey</h3>
                 </div> 
                 <!-- END Song 2 --> 
                 <!-- Song 1 -->
@@ -238,7 +238,7 @@
                     <div class="overlay"></div>
                     <div class="play-song"><i class="fa-regular fa-circle-play fa-4x"></i></div>           
                   </div> 
-                  <h3>Daily Mix 1</h3>
+                  <h3>Ludovico Einaudi</h3>
                 </div> 
                 <!-- END Song 2 --> 
             </div>
@@ -248,7 +248,35 @@
     </main>
 
     <!-- FOOTER -->
-    <footer>
+    <footer class="footer-container">
+      <div class="flex-container player-brani">
+        <div class="col">
+          <div><img src="img/sinister.jpeg" alt="" class="img-mid"></div>
+          <div class="brano-desc">
+            <h5>Sinister</h5>
+            <span>Brano nome</span>
+          </div>
+          <div class="brano-desc">
+            <i class="fa-regular fa-heart"></i>
+            <i class="fa-regular fa-folder "></i>
+          </div>
+          
+        </div>
+        <div class="col song-bar">
+          <div>
+            <i class="fa-solid fa-shuffle img-mid"></i>
+            <i class="fa-solid fa-backward-step img-small"></i>
+            <i class="fa-regular fa-circle-play img-small"></i>
+            <i class="fa-solid fa-forward-step img-small"></i>
+            <i class="fa-solid fa-arrow-rotate-right img-small"></i>   
+          </div>
+          <div>
+          </div>             
+        </div>
+        <div class="col">
+          Lorem ipsum dolor 
+        </div>
+      </div>
     </footer>
   </div>
 </body>
