--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
       <div class="main-content">
         <div class="nav-main">
           <ul class="flex-container ul-main">
-            <li class="custom-border">In evidenza</li>
-            <li>Podcast</li>
-            <li>classifiche</li>
-            <li>Generi e mood</li>
-            <li>Nuove uscite</li>
-            <li>Scopri</li>
+            <li class="custom-border"><a href="#">In evidenza</a></li>
+            <li><a href="#">Podcast</a></li>
+            <li><a href="#">classifiche</a></li>
+            <li><a href="#">Generi e mood</a></li>
+            <li><a href="#">Nuove uscite</a></li>
+            <li><a href="#">Scopri</a></li>
           </ul>
         </div>
         <div class="main-container">
@@ -250,9 +250,9 @@
     <!-- FOOTER -->
     <footer class="footer-container">
       <div class="flex-container player-brani">
-        <div class="col">
+        <div class="col song-info">
           <div><img src="img/sinister.jpeg" alt="" class="img-mid"></div>
-          <div class="brano-desc">
+          <div class="brano-desc margin-left">
             <h5>Sinister</h5>
             <span>Brano nome</span>
           </div>
@@ -260,18 +260,22 @@
             <i class="fa-regular fa-heart"></i>
             <i class="fa-regular fa-folder "></i>
           </div>
-          
-        </div>
-        <div class="col song-bar">
+        </div>  
+        <div class="col ss">
           <div>
-            <i class="fa-solid fa-shuffle img-mid"></i>
-            <i class="fa-solid fa-backward-step img-small"></i>
-            <i class="fa-regular fa-circle-play img-small"></i>
-            <i class="fa-solid fa-forward-step img-small"></i>
-            <i class="fa-solid fa-arrow-rotate-right img-small"></i>   
+            <div class="song-bar aa">
+              <i class="fa-solid fa-shuffle"></i>
+              <i class="fa-solid fa-backward-step"></i>
+              <i class="fa-regular fa-circle-play fa-2x"></i>
+              <i class="fa-solid fa-forward-step"></i>
+              <i class="fa-solid fa-arrow-rotate-right"></i> 
+            </div>
+            <div>
+              <span>0.25</span>
+              <div class="bar"></div>
+              <span>0.25</span> 
+            </div>                                      
           </div>
-          <div>
-          </div>             
         </div>
         <div class="col">
           Lorem ipsum dolor 
