--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@
             <i class="fa-regular fa-folder "></i>
           </div>
         </div>  
-        <div class="col ss">
+        <div class="col col-align">
           <div>
-            <div class="song-bar aa">
+            <div class="song-bar">
               <i class="fa-solid fa-shuffle"></i>
               <i class="fa-solid fa-backward-step"></i>
               <i class="fa-regular fa-circle-play fa-2x"></i>
