--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
           </div>
         </div>  
         <div class="col col-align">
-          <div>
+          <div class="aa">
             <div class="song-bar">
               <i class="fa-solid fa-shuffle"></i>
               <i class="fa-solid fa-backward-step"></i>
