--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <!-- FOOTER -->
     <footer class="footer-container">
       <div class="flex-container player-brani">
-        <div class="col song-info">
+        <div class="col center-align">
           <div><img src="img/sinister.jpeg" alt="" class="img-mid"></div>
           <div class="brano-desc margin-left">
             <h5>Sinister</h5>
@@ -261,24 +261,37 @@
             <i class="fa-regular fa-folder "></i>
           </div>
         </div>  
-        <div class="col col-align">
-          <div class="aa">
+        <div class="col col-align width40">
+          <div class="width100">
             <div class="song-bar">
               <i class="fa-solid fa-shuffle"></i>
               <i class="fa-solid fa-backward-step"></i>
-              <i class="fa-regular fa-circle-play fa-2x"></i>
+              <i class="fa-regular fa-circle-play fa-2x play-hover"></i>
               <i class="fa-solid fa-forward-step"></i>
               <i class="fa-solid fa-arrow-rotate-right"></i> 
             </div>
-            <div>
-              <span>0.25</span>
-              <div class="bar"></div>
-              <span>0.25</span> 
+            <div class="width100">
+              <div class="center-align flex-container">
+                <span class="color-white-font">0.25</span>
+                <div class="bar">
+                  <div class="overlay-bar"></div>
+                  <i class="fa-solid fa-circle pinter"></i> 
+                </div>       
+                <span class="color-white-font">0.25</span> 
+              </div>         
             </div>                                      
           </div>
         </div>
-        <div class="col">
-          Lorem ipsum dolor 
+        <div class="col col-align">
+          <div class="volume-bar">
+            <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-desktop"></i>
+            <i class="fa-solid fa-volume-high"></i>
+            <div class="bar">
+              <div class="overlay-bar"></div>
+              <i class="fa-solid fa-circle pinter"></i> 
+            </div>
+          </div>
         </div>
       </div>
     </footer>
